Added a security policy to lock down user code.