@@ -225,11 +225,13 @@ http://docs.oracle.com/javase/7/docs/jdk/api/jpda/jdi/com/sun/jdi/connect/Connec
 
             // set a memory limit
 
-            options += "-Xmx512M" + " ";
+            options += "-Xmx512M ";
 
-            options += "-Dfile.encoding=UTF-8" + " ";
+            options += "-Dfile.encoding=UTF-8 ";
 
-            options += "-Djava.awt.headless=true" + " ";
+            options += "-Djava.awt.headless=true ";
+            options += "-Djava.security.manager ";
+            options += "-Djava.security.policy=src/user_code.policy ";
 
             ((Connector.Argument)(args.get("options"))).setValue(options);
 
